src/internal/grid/styles.scss
@use "../../../node_modules/@cloudscape-design/design-tokens/index.scss" as cs;

.grid {
  display: grid;
  justify-items: stretch;
  justify-content: stretch;
  align-content: stretch;
  gap: cs.$space-scaled-m;
  grid-auto-rows: 100px;
}

.grid[data-columns="1"] {
  grid-template-columns: 1fr;
}

.grid[data-columns="4"] {
  grid-template-columns: repeat(4, 1fr);
}

$columns: 4;

@for $i from 1 through $columns {
  .grid[data-columns="1"] > .grid__item[data-column-span="#{$i}"] {
    grid-column-end: span 1;
  }

  .grid[data-columns="4"] > .grid__item[data-column-span="#{$i}"] {
    grid-column-end: span $i;
  }
}

@for $i from 1 through $columns {
  .grid[data-columns="1"] > .grid__item[data-column-offset="#{$i}"] {
    grid-column-start: 1;
  }

  .grid[data-columns="4"] > .grid__item[data-column-offset="#{$i}"] {
    grid-column-start: $i;
  }
}

